--- a/ModulesAndWebpack/package.json
+++ b/ModulesAndWebpack/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "softwaredesign",
+  "name": "modulesandwebpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "tsc-watch": "^4.2.8"
-  },
-  "devDependencies": {
-  },
-  "scripts": { 
-    "build" : "webpack",
+  "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
